nginx/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: demoapp
  labels:
    app: load-generator
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do wget -q -O- http://nginx-service.demoapp.svc.cluster.local; done']
